usefulprograms/errors.txt
ERROR:
execfile.c: In function ‘main’:
execfile.c:5:10: warning: initialization of ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
  int x = "dasdas";
          ^~~~~~~~
execfile.c:7:9: error: ‘s’ undeclared (first use in this function)
  printf(s);
         ^
execfile.c:7:9: note: each undeclared identifier is reported only once for each function it appears in
